--- a/src/app/components/private/shared/side-bar/side-bar.component.html
+++ b/src/app/components/private/shared/side-bar/side-bar.component.html
@@ -30,7 +30,7 @@
         </a>
         <a class="nav-link" routerLink="/admin/trainings">
           <div class="sb-nav-link-icon"><i class="fa-solid fa-book"></i></div>
-          Formation
+          Formations
         </a>
         <a class="nav-link" routerLink="/admin/articles">
           <div class="sb-nav-link-icon">
