--- a/src/app/components/private/trainers/trainers-list/trainers-list.component.html
+++ b/src/app/components/private/trainers/trainers-list/trainers-list.component.html
@@ -68,13 +68,22 @@
                         style="color: white"
                         aria-hidden="true"
                       ></i></button
-                    ><button
-                      class="btn btn-danger mx-2"
-                      style="color: white"
-                      (click)="delete(trainer._id, i)"
-                    >
-                      <i class="fa fa-trash" aria-hidden="true"></i>
-                    </button>
+                    > <button
+                    class="btn btn-danger mx-2"
+                    style="color: white"
+                    [swal]="{
+                      text:
+                        'tu vas supprimer ' +
+                        trainer.firstname +
+                        ', tu es sure ?',
+                      showCancelButton: true,
+                      confirmButtonText: 'supprimer',
+                      confirmButtonColor: 'red'
+                    }"
+                    (confirm)="delete(trainer._id, i)"
+                  >
+                    <i class="fa fa-trash" aria-hidden="true"></i>
+                  </button>
                   </td>
                 </tr>
               </tbody>
