--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -32,12 +32,8 @@
                                     formControlName="lastname">
                                 <label for="name">Nom de famille</label>
                                 <div *ngIf="lastname?.invalid && lastname?.touched">
-                                    <small *ngIf="lastname?.errors?.['required']" class="text-danger">lastname
-                                        required<br></small>
-                                    <small *ngIf="lastname?.errors?.['pattern']" class="text-danger"> invalid
-                                        lastname<br></small>
-                                    <small *ngIf="lastname?.errors?.['minlength']" class="text-danger">Lastname should
-                                        contains 2 chars at least<br></small>
+                                    <small *ngIf="lastname?.errors?.['required']" class="text-danger">nom de famille requis<br></small>
+                                    <small *ngIf="lastname?.errors?.['pattern']" class="text-danger"> nom de famille invalide<br></small>
                                 </div>
                             </div>
                         </div>
@@ -61,9 +57,9 @@
                                 <label for="email">Email</label>
                                 <div *ngIf="firstname?.invalid && email?.touched">
                                     <small *ngIf="email?.errors?.['required']" class="text-danger">email
-                                        required<br></small>
-                                    <small *ngIf="email?.errors?.['email']" class="text-danger"> invalid
-                                        email<br></small>
+                                        requis<br></small>
+                                    <small *ngIf="email?.errors?.['email']" class="text-danger"> 
+                                        email invalide<br></small>
                                 </div>
                             </div>
                         </div>
@@ -74,7 +70,7 @@
                                 <label for="telephone">telephone</label>
                                 <div *ngIf="telephone?.invalid && email?.touched">
                                     <small *ngIf="telephone?.errors?.['required']" class="text-danger">telephone
-                                        required<br></small>
+                                        requis<br></small>
                             </div>
                         </div>
                         </div>
@@ -86,9 +82,9 @@
                                 <label for="name">mot de passe</label>
                                 <div *ngIf="password?.invalid && password?.touched">
                                     <small *ngIf="password?.errors?.['required']" class="text-danger">password
-                                        required<br></small>
-                                    <small *ngIf="password?.errors?.['minlength']" class="text-danger">invalid
-                                        password<br></small>
+                                        requis<br></small>
+                                    <small *ngIf="password?.errors?.['minlength']" class="text-danger">
+                                        password invalide<br></small>
                                 </div>
                             </div>
                         </div>
@@ -99,19 +95,18 @@
                                     formControlName="repassword">
                                 <label for="name">Répétez votre mot de passe</label>
                                 <div *ngIf="repassword?.invalid && repassword?.touched">
-                                    <small *ngIf="repassword?.errors?.['required']" class="text-danger">repassword
-                                        required<br></small>
+                                    <small *ngIf="repassword?.errors?.['required']" class="text-danger">re-Mot de passe requis<br></small>
                                 </div>
                                 <div *ngIf="repassword?.valid && repassword?.value != password?.value"
                                     class="text-danger">
-                                    The passwords entered do not match
+                                    Les mots de passe saisis ne correspondent pas
                                 </div>
                             </div>
                         </div>
 
 
                         <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" [disabled]="registerForm.invalid"
+                            <button class="btn btn-primary w-100 py-3" [disabled]="registerForm.invalid "
                                 type="submit">S'inscrire maintenant !</button>
                         </div>
 
