--- a/src/app/components/private/categories/categories-list/categoriesList.component.html
+++ b/src/app/components/private/categories/categories-list/categoriesList.component.html
@@ -55,7 +55,16 @@
                     <button
                       class="btn btn-danger mx-2"
                       style="color: white"
-                      (click)="delete(category._id, i)"
+                      [swal]="{
+                        text:
+                          'tu vas supprimer ' +
+                          category.name +
+                          ', tu es sure ?',
+                        showCancelButton: true,
+                        confirmButtonText: 'supprimer',
+                        confirmButtonColor: 'red'
+                      }"
+                      (confirm)="delete(category._id, i)"
                     >
                       <i class="fa fa-trash" aria-hidden="true"></i>
                     </button>
