--- a/src/app/components/private/messages/message-list/message-list.component.html
+++ b/src/app/components/private/messages/message-list/message-list.component.html
@@ -51,7 +51,16 @@
                     <button
                       class="btn btn-danger mx-2"
                       style="color: white"
-                      (click)="delete(message._id, i)"
+                      [swal]="{
+                        text:
+                          'tu vas supprimer ' +
+                          message.title +
+                          ', tu es sure ?',
+                        showCancelButton: true,
+                        confirmButtonText: 'supprimer',
+                        confirmButtonColor: 'red'
+                      }"
+                      (confirm)="delete(message._id, i)"
                     >
                       <i class="fa fa-trash" aria-hidden="true"></i>
                     </button>
