--- a/src/app/components/private/trainings/modify-training/modify-training.component.html
+++ b/src/app/components/private/trainings/modify-training/modify-training.component.html
@@ -14,7 +14,7 @@
             <li class="breadcrumb-item active">modifier une formation</li>
           </ol>
 
-          <form [formGroup]="myForm" (ngSubmit)="update()">
+          <form [formGroup]="myForm">
             <div>
               <img
                 [src]="imageUrl"
@@ -234,12 +234,18 @@
             </div>
 
             <button
-              class="btn btn-primary mt-2"
-              [disabled]="myForm.invalid"
-              type="submit"
-            >
-              modifier
-            </button>
+            class="btn btn-primary mt-2"
+            style="color: white"
+            [swal]="{
+              text: 'tu es sure ?',
+              showCancelButton: true,
+              confirmButtonText: 'Modifier',
+              confirmButtonColor: '#FF8800'
+            }"
+            (confirm)="update()"
+          >
+            modifier
+          </button>
           </form>
         </div>
       </main>
