--- a/src/app/components/private/trainings/training-list/training-list.component.html
+++ b/src/app/components/private/trainings/training-list/training-list.component.html
@@ -67,6 +67,13 @@
                       <i class="fa fa-eye" aria-hidden="true"></i>
                     </button>
                     <button
+                      class="btn btn-success mx-2"
+                      style="color: white"
+                      [routerLink]="['/admin/trainings/inscriptions', training._id]"
+                    >
+                      <i class="fa fa-users" aria-hidden="true"></i>
+                    </button>
+                    <button
                       class="btn btn-warning mx-1"
                       [routerLink]="['/admin/trainings/update/', training._id]"
                     >
@@ -75,13 +82,22 @@
                         style="color: white"
                         aria-hidden="true"
                       ></i></button
-                    ><button
-                      class="btn btn-danger mx-1"
-                      style="color: white"
-                      (click)="delete(training._id, i)"
-                    >
-                      <i class="fa fa-trash" aria-hidden="true"></i>
-                    </button>
+                    > <button
+                    class="btn btn-danger mx-2"
+                    style="color: white"
+                    [swal]="{
+                      text:
+                        'tu vas supprimer ' +
+                        training.name +
+                        ', tu es sure ?',
+                      showCancelButton: true,
+                      confirmButtonText: 'supprimer',
+                      confirmButtonColor: 'red'
+                    }"
+                    (confirm)="delete(training._id, i)"
+                  >
+                    <i class="fa fa-trash" aria-hidden="true"></i>
+                  </button>
                   </td>
                 </tr>
               </tbody>
