--- a/src/app/components/public/courses/courses.component.html
+++ b/src/app/components/public/courses/courses.component.html
@@ -25,21 +25,24 @@
       <h1 class="mb-5">Tous les catégories</h1>
     </div>
 
-    <div class="d-flex  justify-content-center">
-      <div class=" m-1">
-      <button (click)="filter('all'); onclick($event)" class="btn btn-sm btn-outline-primary categoryButton">
-        Tous
-      </button>
-      </div>
-      <div class=" m-1" *ngFor="let category of categoriesList"
-      (click)="filter(category.name); onclick($event)">
+    <div class="d-flex justify-content-center">
+      <div class="m-1">
         <button
-        class="btn btn-sm btn-outline-primary categoryButton"
-      >
-        {{ category.name }}
-    </button>
+          (click)="filter('all'); onclick($event)"
+          class="btn btn-sm btn-outline-primary categoryButton"
+        >
+          Tous
+        </button>
       </div>
-    
+      <div
+        class="m-1"
+        *ngFor="let category of categoriesList"
+        (click)="filter(category.name); onclick($event)"
+      >
+        <button class="btn btn-sm btn-outline-primary categoryButton">
+          {{ category.name }}
+        </button>
+      </div>
     </div>
   </div>
 </div>
@@ -88,15 +91,9 @@
             >
               <a
                 [routerLink]="['/courses/', training._id]"
-                class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
-                style="border-radius: 30px 0 0 30px"
+                class="btn btn-sm btn-primary px-3"
+                style="border-radius: 30px "
                 >Lire la suite</a
-              >
-              <a
-                href="#"
-                class="flex-shrink-0 btn btn-sm btn-primary px-3"
-                style="border-radius: 0 30px 30px 0"
-                >Rejoindre maintenant</a
               >
             </div>
           </div>
